	* Curses GUI updated to last version
	* Giantslayer grants STR 18/** when wielded

	* more candles:
	  - lighting shop in orcus town
	  - Gnomes get candles (more likely in dark mines) (from AceHack)

	* patches:
	  - DYWYPISI? (by Jafet)
	  - Grudge (by Nephi)
	  - MSGTYPE option (by Pasi Kallinen)
	  - Sortloot (by Jukka Lahtinen)
	  - Quiver Fired Ammunition (by Jukka Lahtinen)

	* user interface improvements:
	  - Autoexplore (from AceHack)
	  - New category menu option: "Unidentified items"
	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
	  - BUC items inside containers dropped on altars (from AceHack)
	  - stairs leading to branches are colored yellow
	  - inventory improvement: generic item usage menu (from AceHack)
	  - visualized HP bar(hitpointbar) activated by default
	  - visual indicator showing which spells can be refreshed (from K-Mod)
	  - show level annotation when entering level (idea by Chris Smith)
	  - refreshing spells is allowed at all time (with prompt) (from AceHack)

	* new dungeon features:
	  - dead trees (from NetHack Brass)

	* vanilla bug fixes:
	  - C343-74, C343-198

2010-10-10  UnNetHack 3.5.3-1
	* bug fixes:
	  - Quest nemesis not carrying bell of opening
	  - Door being created in the corner of a room
	  - Mine levels being lit too often

2010-09-04  UnNetHack 3.5.3
	* Conflict makes blackmarket shopkeeper angry
	* Fully eroded armor gets destroyed
	* Lowered the needed experience level for the quest
	* HTML dump
	* Pi day support
	* Reduced Sokoban branch by one level
	* Vampires as player selectable starting race (from Slash'Em)
	* Remove instadeath poison, reduce hp and maxhp instead (from SporkHack)

	* patches:
	  - Conduct: Elbereth tracking (by Ray Kulhanek)
	  - Dungeon Map Overview 3 (by Hojita Discordia)
	  - Extended Conducts v2.3 (by Andreas Dorn)
	  - Paranoid Patch (by various)
	  - Splittable #adjust Patch (by Sam Dennis and Jukka Lahtinen)
	  - Tutorial (by Alex Smith)
